indicators made smaller on mobile, apartmets section order change

--- a/styles/apartment.css
+++ b/styles/apartment.css
@@ -417,6 +417,15 @@ footer {
   :root {
     --slider-image-height: 200px;
   }
+
+  .indicator {
+    padding: 0.3em;
+  }
+
+  .indicator div {
+    width: 0.8em;
+    height: 0.3em;
+  }
 }
 
 @media screen and (max-width: 349px) {
